--- a/package.json
+++ b/package.json
@@ -26,28 +26,27 @@
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.2.17",
-    "@jadejr/kysely-pglite": "^1.0.1",
-    "@mikro-orm/knex": "7.0.0-dev.7",
-    "@mikro-orm/postgresql": "7.0.0-dev.7"
+    "@jadejr/kysely-pglite": "^1.0.3",
+    "@mikro-orm/knex": "7.0.0-dev.9",
+    "@mikro-orm/postgresql": "7.0.0-dev.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
-    "@mikro-orm/core": "7.0.0-dev.7",
+    "@mikro-orm/core": "7.0.0-dev.9",
     "@types/emscripten": "^1.40.1",
-    "@types/node": "^22.14.0",
-    "@types/pg": "^8.11.11",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@types/node": "^22.14.1",
+    "@types/pg": "^8.11.13",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
     "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
-    "kysely": "https://pkg.pr.new/kysely-org/kysely/kysely@2b7007e",
+    "kysely": "^0.28.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.30.1"
   },
   "peerDependencies": {
-    "@mikro-orm/core": "7.0.0-dev.7",
-    "kysely": "*"
+    "@mikro-orm/core": "^7.0.0-dev.9"
   },
   "files": [
     "dist"
