--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "prepare": "pnpm run build"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.2.17",
-    "@jadejr/kysely-pglite": "^1.0.3",
-    "@mikro-orm/knex": "7.0.0-dev.9",
-    "@mikro-orm/postgresql": "7.0.0-dev.9"
+    "@electric-sql/pglite": "^0.3.5",
+    "@jadejr/kysely-pglite": "^1.0.4",
+    "@mikro-orm/knex": "7.0.0-dev.22",
+    "@mikro-orm/postgresql": "7.0.0-dev.22"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@mikro-orm/core": "7.0.0-dev.9",
+    "@eslint/js": "^9.31.0",
+    "@mikro-orm/core": "7.0.0-dev.22",
     "@types/emscripten": "^1.40.1",
-    "@types/node": "^22.14.1",
-    "@types/pg": "^8.11.13",
-    "@typescript-eslint/eslint-plugin": "^8.30.1",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "kysely": "^0.28.0",
-    "prettier": "^3.5.3",
+    "@types/node": "^22.16.5",
+    "@types/pg": "^8.15.4",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "kysely": "0.28.2",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1"
+    "typescript-eslint": "^8.38.0"
   },
   "peerDependencies": {
     "@mikro-orm/core": "^7.0.0-dev.9"
