--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   "dependencies": {
     "@electric-sql/pglite": "^0.3.14",
     "@jadejr/kysely-pglite": "^1.0.4",
-    "@mikro-orm/knex": "7.0.0-dev.22",
-    "@mikro-orm/postgresql": "7.0.0-dev.22"
+    "@mikro-orm/sql": "7.0.0-dev.105",
+    "@mikro-orm/postgresql": "7.0.0-dev.105"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@mikro-orm/core": "7.0.0-dev.22",
+    "@mikro-orm/core": "7.0.0-dev.105",
     "@types/emscripten": "^1.41.5",
     "@types/node": "^22.19.2",
     "@types/pg": "^8.16.0",
@@ -40,13 +40,13 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "kysely": "0.28.2",
+    "kysely": "^0.28.9",
     "prettier": "^3.7.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0"
   },
   "peerDependencies": {
-    "@mikro-orm/core": "^7.0.0-dev.9"
+    "@mikro-orm/core": "^7.0.0-dev.105"
   },
   "files": [
     "dist"
