--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.3.14",
-    "@mikro-orm/sql": "7.0.0-dev.105",
-    "@mikro-orm/postgresql": "7.0.0-dev.105"
+    "@mikro-orm/sql": "7.0.0-dev.105"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
